--- a/src/template.html
+++ b/src/template.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
     <title>Redirect</title>
   </head>
   <body>
+    <p>Redirecting...</p>
     <p
       >If you are not redirected automatically,
       <a href="#" onclick="redirectRandomly()">click here</a>.</p
