--- a/src/template.html
+++ b/src/template.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
-    <title>Redirect</title>
+    <title>Redirecting...</title>
   </head>
   <body>
-    <p>Redirecting...</p>
+    <div class="container"
+      ><img src="./img/loading-icon.png" alt="Loading Icon" /><p
+        >Redirecting...</p
+      ></div
+    >
   </body>
 </html>
