remove unneseccary img and css file

--- a/src/template.html
+++ b/src/template.html
@@ -3,15 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
     <script src="index.js" defer></script>
     <title>Redirecting...</title>
   </head>
-  <body>
-    <div class="container"
-      ><img src="./img/loading-icon.png" alt="Loading Icon" /><p
-        >Redirecting...</p
-      ></div
-    >
+  <body style="font-family: Arial, Helvetica, sans-serif">
+    <p>Redirecting...</p>
   </body>
 </html>
